--- a/cloz6a9gp000208i928nab050.md
+++ b/cloz6a9gp000208i928nab050.md
@@ -1,10 +1,98 @@
 ---
 title: "My First Blog"
-datePublished: Tue Dec 21 2021 18:00:00 GMT+0000 (Coordinated Universal Time)
+seoTitle: "First Blog: Beginner's Journey"
+seoDescription: "Aryan shares his STEM journey, electric vehicles, web development, and entrepreneurship on his blog, inspiring and connecting with others"
+datePublished: Tue Jan 03 2023 06:00:00 GMT+0000 (Coordinated Universal Time)
 cuid: cloz6a9gp000208i928nab050
 slug: my-first-blog
+cover: https://cdn.hashnode.com/res/hashnode/image/stock/unsplash/IbngTBpNuMA/upload/4851d71060f43601161f36d88f35ee9a.jpeg
 tags: web-development, webdev, electric-vehicle
 
 ---
 
-My name is Aryan Bansal, and I am an avid web developer and electric vehicle enthusiast. Over my 18-year life thus far, I have seen the rapid transformation of the internet and vehicles. I am excited to share my knowledge on the latest tech that is rEVolutionizing our world!
+Hello! My name is Aryan, and I am currently a high school junior from Coppell, Texas in the US. As I am writing this post, it is a gloomy afternoon in January, and I had an impulse to write a blog post. I'm not really sure where this blog may go or how it may end up looking. However, I am excited about the impending journey and wherever it leads! Without further ado, here goes the Q & A...
+
+### Why did you start this blog?
+
+There are several distinct reasons for starting this blog, so I'll elaborate on each one:
+
+1. Throughout my journey in STEM, I've encountered numerous challenges, and believe I can help other students with limited access to resources. By sharing my experiences and the lessons I've learned, I hope to provide guidance and support to those who may be struggling in similar situations.
+    
+2. I've developed interests in fields that aren't readily taught—electric vehicles and website development. However, these fields significantly impact our society through the Internet and transportation. By exploring these topics on my blog, I aim to raise awareness and spark discussions about their importance and potential for shaping our future.
+    
+3. Everyone has a unique perspective shaped by their background and experiences. I'd like to share the events that have influenced me through my writing. By doing so, I hope to connect with others who share similar interests or have faced similar challenges, fostering a sense of community and understanding.
+    
+4. I feel that, as a society, we have lost the importance of writing down our thoughts and reflecting. I aim to reignite its significance by demonstrating the value of introspection and self-expression through my blog. By sharing my thoughts and experiences, I hope to inspire others to do the same, fostering a culture of reflection and personal growth.
+    
+5. I want to document my high school journey so that I can look back in 5 years and smile at my younger self's words, realizing how far I've come. By chronicling my experiences, successes, and failures, I hope to create a tangible record of my personal growth and development, serving as a reminder of the challenges I've overcome and the lessons I've learned along the way.
+    
+
+### How did you design the website to host the blog?
+
+The blog website is built using a design provided by Hashnode, a global community platform for developers to connect, share knowledge, and learn from one another. As of now, I haven't made many additional design changes to the website (although this may change if you're reading the blog at a later date). I opted for Hashnode over creating my own website from scratch because it already includes all the essential components for a blog site and offers a thriving community for engagement and networking.
+
+In the future, I plan to further customize the website to make it truly unique and reflective of my personal style. This will involve adding custom design elements, adjusting the layout, and possibly incorporating interactive features to enhance the user experience.
+
+If you have any questions about website development in general or are interested in having a website built, please don't hesitate to reach out through the contact form! I have also initiated other projects aimed at teaching website development and using it as a tool to benefit the community, such as the [Coppell Web Dev Club](https://coppellwebdev.github.io).
+
+For those considering starting a STEM blog but unsure about website development, I wholeheartedly recommend Hashnode as a user-friendly and feature-rich platform to kickstart your blogging journey!
+
+### What topics do you plan to cover in your blog posts?
+
+Here's an expanded list of the series I plan to start on the blog, delving into various topics that interest me and may be helpful to others.
+
+1. **Electric Vehicles**: This series will discuss the latest advances in electric vehicles (EVs), exploring their environmental and economic impact. I'll cover topics such as battery technology, charging infrastructure, and the role of EVs in the future of transportation.
+    
+2. **Web Development**: This series will focus on emerging trends and new technologies in web development, providing insights and guidance for beginners looking to get started in the field. I'll discuss popular programming languages, frameworks, and tools, as well as best practices for creating responsive and user-friendly websites.
+    
+3. **Next-Gen Energy**: In this series, I'll share my research on battery segmentation and discuss ways to improve the power grid through efficiency and innovation. I'll explore topics such as renewable energy sources, smart grid technology, and energy storage solutions that can help create a more sustainable future.
+    
+4. **Poetry**: As a creative outlet, this series will feature my original poetry. While the focus will be on haikus (which I believe are truly where it's at), I'll also explore other forms and styles of poetry, sharing my thoughts and inspirations behind each piece.
+    
+5. **Business & Entrepreneurship**: This series will delve into current trends in business management and share my ideas about STEM startups. I'll discuss topics such as leadership, innovation, and the challenges faced by entrepreneurs in the ever-evolving world of technology and science.
+    
+6. **My Journey**: In this more personal series, I'll share my impulsive thoughts and experiences, recounting events that have shaped my life and career. This space will serve as a platform for reflection, growth, and connection with others who may be on a similar journey.
+    
+
+### What's your favorite thing about writing?
+
+One of the things I absolutely love about blogging is the freedom it gives me to express myself. It's a thrilling journey of discovery where I can dive deep into topics that fascinate me, break them down, and share my thoughts with the world. I can't even begin to express the joy I feel when I hit that 'publish' button and my words, my thoughts, my experiences are out there for everyone to see. It's like giving a piece of myself to the world, and in return, I get to connect with others, learn from their experiences, and grow as a person. Every blog post is a new adventure, a new story to tell, and I am beyond excited about where this journey is taking me!
+
+### What's your least favorite thing about writing?
+
+Despite my passion for blogging, there's one aspect that I expect to be a challenge - the pressure of consistency. The anticipation of keeping up with a regular posting schedule, ensuring each post is as engaging as the last, may sometimes feel overwhelming. It's like a race against the clock, a constant battle with the blank page. But, in all honesty, it's this very challenge that makes the process even more exhilarating. It pushes me to step out of my comfort zone, to think on my feet, and to continuously strive for improvement. So, even my least favorite thing about blogging ends up being a catalyst for growth and creativity. And that's the beauty of it!
+
+### Why do you want to be an engineer & entrepreneur?
+
+My aspiration to become an engineer, specifically in the field of autonomous vehicle technology, is driven by my fascination with the convergence of software and hardware to create intelligent systems. The idea of designing and developing technologies that can revolutionize transportation, improve safety, and contribute to a more sustainable future deeply excites me.
+
+Being an entrepreneur complements my engineering aspirations, as it allows me to transform these innovative technologies into viable business solutions. The cross-section of engineering and entrepreneurship is where cutting-edge innovations meet market needs, creating a unique value proposition. It's the thrill of leading teams, navigating business challenges, and bringing these technological solutions to market that draws me towards entrepreneurship.
+
+### What other activities do you dedicate your time to?
+
+1. **Research:** I am researching dendrite segmentation while utilizing micro-CT of batteries. It involves studying existing literature, understanding what's known, identifying gaps, and developing a machine-learning model.
+    
+2. **Volunteering:** As a scribe at the Greater Dallas Arya Samaj Cancer Clinic, I translate medical diagnoses into plain English and communicate with ESL patients in Spanish. This experience, rooted in my Arya Samaj heritage, allows me to contribute to my community.
+    
+3. **Designing Websites:** In my pursuit of understanding web development, I have started the Coppell Web Dev Club to foster interest in the area and facilitate lesser-known NPOs by developing websites for them at no cost.
+    
+4. **Competitive Physics:** At my school, I am Co-president of our school's physics club, which involves developing lessons and practices while coordinating competitions. I have received various accolades in the last couple of years.
+    
+5. **Tutoring:** I help peers around the globe through a platform called Schoolhouse. To sign up for a future session and view my impact, visit my [profile](https://schoolhouse.world/u/78275).
+    
+6. **Band:** As a part of my high school's band I play clarinet and oboe while dedicating time to after-school rehearsals and other competitions. Further, I help maintain the organization's website as webmaster
+    
+7. **Other Projects:** Previously, I served as an intern at the IEEE Nanotechnology Council and the University of Washington while studying 2D Materials. Additionally, I am leading an international team in the CERN Bl4S competition with a proposal about batteries' changes in spacelike-radiation.
+    
+
+### What are your future goals and aspirations?
+
+In the future, I aspire to pursue a degree that intersects the fields of engineering, computer science, and business. This unique blend of disciplines will equip me with the necessary technical skills, analytical capabilities, and entrepreneurial perspective to navigate the rapidly evolving technological landscape. My ultimate goal is to leverage these skills to research and develop innovative products that have the potential to significantly enhance our society. I envision myself at the forefront of technological advancements, transforming cutting-edge ideas into marketable solutions that address real-world needs. Whether it's through creating more efficient energy systems, developing advanced AI-driven tools, or improving digital infrastructures, my aim is to make a meaningful impact on society and drive progress towards a more sustainable and inclusive future.
+
+### What's your family background?
+
+I hail from Haryana, a vibrant state in India, rich in culture and tradition. While it's considered a lesser-developed region, the spirit of its people and the potential it holds are immense. My family's journey from Haryana to the United States symbolizes my parents' resilience and pursuit. These roots have shaped our values of community, humility, and a passion for learning. As a first-generation immigrant from Haryana, I bring a unique perspective and am eager to contribute to the diversity of the United States.
+
+### How do you spend your free time?
+
+In my free time, I'm an avid supporter of my favorite sports team, the Dallas Cowboys. Whether it's watching their games, analyzing their strategies, or cheering them on, I'm always there for my team. And let's just set the record straight once and for all - Dez definitely caught it! On a different note, I also enjoy origami and cardboard DIY projects. There's something incredibly soothing about folding paper into intricate designs and transforming ordinary cardboard into unique creations. It's a blend of precision, creativity, and patience, much like waiting for the referees to make the right call!
