update post: My First Blog

--- a/cloz6a9gp000208i928nab050.md
+++ b/cloz6a9gp000208i928nab050.md
@@ -68,6 +68,8 @@ My aspiration to become an engineer, specifically in the field of autonomous veh
 
 Being an entrepreneur complements my engineering aspirations, as it allows me to transform these innovative technologies into viable business solutions. The cross-section of engineering and entrepreneurship is where cutting-edge innovations meet market needs, creating a unique value proposition. It's the thrill of leading teams, navigating business challenges, and bringing these technological solutions to market that draws me towards entrepreneurship.
 
+%\[[https://giphy.com/gifs/pudgypenguins-data-code-coding-2IudUHdI075HL02Pkk](https://giphy.com/gifs/pudgypenguins-data-code-coding-2IudUHdI075HL02Pkk)\]
+
 ### What other activities do you dedicate your time to?
 
 1. **Research:** I am researching dendrite segmentation while utilizing micro-CT of batteries. It involves studying existing literature, understanding what's known, identifying gaps, and developing a machine-learning model.
@@ -96,3 +98,11 @@ I hail from Haryana, a vibrant state in India, rich in culture and tradition. Wh
 ### How do you spend your free time?
 
 In my free time, I'm an avid supporter of my favorite sports team, the Dallas Cowboys. Whether it's watching their games, analyzing their strategies, or cheering them on, I'm always there for my team. And let's just set the record straight once and for all - Dez definitely caught it! On a different note, I also enjoy origami and cardboard DIY projects. There's something incredibly soothing about folding paper into intricate designs and transforming ordinary cardboard into unique creations. It's a blend of precision, creativity, and patience, much like waiting for the referees to make the right call!
+
+P.S. As you may realize, I love GIFs!
+
+### Conclusion
+
+Whoo...that was a lot. I hope you learned something about me! I appreciate your time and engagement.
+
+%\[[https://giphy.com/gifs/foxhomeent-hi-window-3oriNScTbEzEVoR1Is](https://giphy.com/gifs/foxhomeent-hi-window-3oriNScTbEzEVoR1Is)\]
