update post: My First Blog

--- a/cloz6a9gp000208i928nab050.md
+++ b/cloz6a9gp000208i928nab050.md
@@ -10,7 +10,7 @@ tags: web-development, webdev, electric-vehicle
 
 ---
 
-Hello! My name is Aryan, and I am currently a high school junior from Coppell, Texas in the US. As I am writing this post, it is a gloomy afternoon in January, and I had an impulse to write a blog post. I'm not really sure where this blog may go or how it may end up looking. However, I am excited about the impending journey and wherever it leads! Without further ado, here goes the Q & A...
+Hello! My name is Aryan, and I am currently a high school junior from Coppell, Texas in the US. As I am writing this post, it is a gloomy afternoon in January, and I had an impulse to write a blog post. I'm not sure where this blog may go or how it may look. However, I am excited about the impending journey and wherever it leads! Without further ado, here goes the Q & A...
 
 ### Why did you start this blog?
 
@@ -49,18 +49,18 @@ Here's an expanded list of the series I plan to start on the blog, delving into 
     
 4. **Poetry**: As a creative outlet, this series will feature my original poetry. While the focus will be on haikus (which I believe are truly where it's at), I'll also explore other forms and styles of poetry, sharing my thoughts and inspirations behind each piece.
     
-5. **Business & Entrepreneurship**: This series will delve into current trends in business management and share my ideas about STEM startups. I'll discuss topics such as leadership, innovation, and the challenges faced by entrepreneurs in the ever-evolving world of technology and science.
+5. **Business & Entrepreneurship**: This series will delve into current trends in business management and share my ideas about STEM startups. I'll discuss topics such as leadership, innovation, and the challenges entrepreneurs face in the ever-evolving world of technology and science.
     
 6. **My Journey**: In this more personal series, I'll share my impulsive thoughts and experiences, recounting events that have shaped my life and career. This space will serve as a platform for reflection, growth, and connection with others who may be on a similar journey.
     
 
 ### What's your favorite thing about writing?
 
-One of the things I absolutely love about blogging is the freedom it gives me to express myself. It's a thrilling journey of discovery where I can dive deep into topics that fascinate me, break them down, and share my thoughts with the world. I can't even begin to express the joy I feel when I hit that 'publish' button and my words, my thoughts, my experiences are out there for everyone to see. It's like giving a piece of myself to the world, and in return, I get to connect with others, learn from their experiences, and grow as a person. Every blog post is a new adventure, a new story to tell, and I am beyond excited about where this journey is taking me!
+One of the things I love about blogging is the freedom it gives me to express myself. It's a thrilling journey of discovery where I can dive deep into topics that fascinate me, break them down, and share my thoughts with the world. I can't even begin to express the joy I feel when I hit that 'publish' button and my words, my thoughts, and my experiences are out there for everyone to see. It's like giving a piece of myself to the world, and in return, I get to connect with others, learn from their experiences, and grow as a person. Every blog post is a new adventure, a new story to tell, and I am beyond excited about where this journey is taking me!
 
 ### What's your least favorite thing about writing?
 
-Despite my passion for blogging, there's one aspect that I expect to be a challenge - the pressure of consistency. The anticipation of keeping up with a regular posting schedule, ensuring each post is as engaging as the last, may sometimes feel overwhelming. It's like a race against the clock, a constant battle with the blank page. But, in all honesty, it's this very challenge that makes the process even more exhilarating. It pushes me to step out of my comfort zone, to think on my feet, and to continuously strive for improvement. So, even my least favorite thing about blogging ends up being a catalyst for growth and creativity. And that's the beauty of it!
+Despite my passion for blogging, there's one aspect that I expect to be a challenge - the pressure of consistency. The anticipation of keeping up with a regular posting schedule, ensuring each post is as engaging as the last, may sometimes feel overwhelming. It's like a race against the clock, a constant battle with the blank page. But, in all honesty, it's this very challenge that makes the process even more exhilarating. It pushes me to step out of my comfort zone, think on my feet, and strive for improvement continuously. So, even my least favorite thing about blogging ends up being a catalyst for growth and creativity. And that's the beauty of it!
 
 ### Why do you want to be an engineer & entrepreneur?
 
@@ -89,7 +89,7 @@ Being an entrepreneur complements my engineering aspirations, as it allows me to
 
 ### What are your future goals and aspirations?
 
-In the future, I aspire to pursue a degree that intersects the fields of engineering, computer science, and business. This unique blend of disciplines will equip me with the necessary technical skills, analytical capabilities, and entrepreneurial perspective to navigate the rapidly evolving technological landscape. My ultimate goal is to leverage these skills to research and develop innovative products that have the potential to significantly enhance our society. I envision myself at the forefront of technological advancements, transforming cutting-edge ideas into marketable solutions that address real-world needs. Whether it's through creating more efficient energy systems, developing advanced AI-driven tools, or improving digital infrastructures, my aim is to make a meaningful impact on society and drive progress towards a more sustainable and inclusive future.
+In the future, I aspire to pursue a degree that intersects the fields of engineering, computer science, and business. This unique blend of disciplines will equip me with the necessary technical skills, analytical capabilities, and entrepreneurial perspective to navigate the rapidly evolving technological landscape. My ultimate goal is to leverage these skills to research and develop innovative products that have the potential to significantly enhance our society. I envision myself at the forefront of technological advancements, transforming cutting-edge ideas into marketable solutions that address real-world needs. Whether it's through creating more efficient energy systems, developing advanced AI-driven tools, or improving digital infrastructures, I aim to make a meaningful impact on society and drive progress toward a more sustainable and inclusive future.
 
 ### What's your family background?
 
@@ -105,4 +105,4 @@ P.S. As you may realize, I love GIFs!
 
 Whoo...that was a lot. I hope you learned something about me! I appreciate your time and engagement.
 
-%\[[https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaDBodXNnZzdpeHoyb2sya3R2ZGx3c3FpNGZidHB2ajRtaW1zNXB3dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oriNScTbEzEVoR1Is/giphy.gif](https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaDBodXNnZzdpeHoyb2sya3R2ZGx3c3FpNGZidHB2ajRtaW1zNXB3dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oriNScTbEzEVoR1Is/giphy.gif)\]
+!([https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaDBodXNnZzdpeHoyb2sya3R2ZGx3c3FpNGZidHB2ajRtaW1zNXB3dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oriNScTbEzEVoR1Is/giphy.gif](https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaDBodXNnZzdpeHoyb2sya3R2ZGx3c3FpNGZidHB2ajRtaW1zNXB3dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oriNScTbEzEVoR1Is/giphy.gif))
