--- a/cloz6a9gp000208i928nab050.md
+++ b/cloz6a9gp000208i928nab050.md
@@ -105,4 +105,4 @@ P.S. As you may realize, I love GIFs!
 
 Whoo...that was a lot. I hope you learned something about me! I appreciate your time and engagement.
 
-!\[Home Alone\] (https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaDBodXNnZzdpeHoyb2sya3R2ZGx3c3FpNGZidHB2ajRtaW1zNXB3dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oriNScTbEzEVoR1Is/giphy.gif)
+[via GIPHY](https://giphy.com/gifs/foxhomeent-hi-window-3oriNScTbEzEVoR1Is)
