--- a/cloz6a9gp000208i928nab050.md
+++ b/cloz6a9gp000208i928nab050.md
@@ -105,4 +105,4 @@ P.S. As you may realize, I love GIFs!
 
 Whoo...that was a lot. I hope you learned something about me! I appreciate your time and engagement.
 
-%\[https://media.giphy.com/media/2KAGlmkPywhZS/giphy.gif\]
+&lt;div style="width:100%;height:0;padding-bottom:74%;position:relative;"&gt;&lt;iframe src="[https://giphy.com/embed/3oriNScTbEzEVoR1Is](https://giphy.com/gifs/foxhomeent-hi-window-3oriNScTbEzEVoR1Is)" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen&gt;&lt;/iframe&gt;&lt;/div&gt;&lt;p&gt;&lt;a href="[https://giphy.com/gifs/foxhomeent-hi-window-3oriNScTbEzEVoR1Is"&gt;via](https://giphy.com/gifs/foxhomeent-hi-window-3oriNScTbEzEVoR1Is) GIPHY&lt;/a&gt;&lt;/p&gt;
