update post: Beginning My Blogging Journey: 10 Q & A s

--- a/cloz6a9gp000208i928nab050.md
+++ b/cloz6a9gp000208i928nab050.md
@@ -1,5 +1,5 @@
 ---
-title: "My First Blog"
+title: "Beginning My Blogging Journey: 10 Q & A s"
 seoTitle: "First Blog: Beginner's Journey"
 seoDescription: "Aryan shares his STEM journey, electric vehicles, web development, and entrepreneurship on his blog, inspiring and connecting with others"
 datePublished: Tue Jan 03 2023 06:00:00 GMT+0000 (Coordinated Universal Time)
