update post: Uncovering an 8-year-old Haiku in My Google Drive

--- a/clqmo16rn000208i42x9yc085.md
+++ b/clqmo16rn000208i42x9yc085.md
@@ -11,25 +11,31 @@ tags: poetry, google-drive, literature, haiku
 
 Have you ever searched your Google Drive for a specific document using its name? Well, just today I was looking for an assignment starting with "homework." As I typed in "h", I didn't see the assignment, so I scrolled to the bottom. There, I found a peculiar document titled "haiku" that was last edited on February 6, 2015.
 
-Sure enough, it was a Haiku that exemplified my obsession with protecting endangered animals at the time. So here it is!
+<details data-node-type="hn-details-summary"><summary>What's a Haiku?</summary><div data-type="detailsContent">a Japanese poem of seventeen syllables, in three lines of five, seven, and five, traditionally evoking images of the natural world.</div></details>
+
+Sure enough, it was a short poem that exemplified my obsession with protecting endangered animals at the time. So here it is!
+
+---
 
 ### **The Black Spider Monkey Haiku**
 
-**Black Spider Monkey**
+Black Spider Monkey
 
-**Super extremely unique**
+Super extremely unique
 
-      **Endangered species**     
+Endangered species
 
-Let's be real...is it the best poetry you've ever heard? Well, it's actually far from it.
+---
 
-Nevertheless, it took me back to my interests from almost a decade ago. Reading the haiku prompted me to read about the Black Spider Monkey which I didn't even know existed.
+Let's be real...is it the best poetry you've ever heard? Well, it's probably far from it.
+
+Nonetheless, it transported me back to my interests from nearly a decade ago. Reading the haiku prompted me to search for the Black Spider Monkey (which I had forgotten even existed).
 
 <div data-node-type="callout">
 <div data-node-type="callout-emoji">💡</div>
 <div data-node-type="callout-text">Fun Fact: The Black Spider Monkey— also known as the Guiana or red-faced spider monkey—is found in eastern South America. Their status is vulnerable according to the <a target="_blank" rel="noopener noreferrer nofollow" href="https://www.worldwildlife.org/species/black-spider-monkey" style="pointer-events: none">WWF.</a></div>
 </div>
 
-Considering how my interests have developed in these last eight years, who knows what I might be doing another decade from now!
+Considering how my fascinations have developed in these last eight years, who knows what I might be doing another eight years from now!
 
 %[https://media.giphy.com/media/5Zesu5VPNGJlm/giphy.gif]
