--- a/cloz6a9gp000208i928nab050.md
+++ b/cloz6a9gp000208i928nab050.md
@@ -5,7 +5,7 @@ seoDescription: "Aryan shares his STEM journey, electric vehicles, web developme
 datePublished: Tue Jan 03 2023 06:00:00 GMT+0000 (Coordinated Universal Time)
 cuid: cloz6a9gp000208i928nab050
 slug: my-first-blog
-cover: https://cdn.hashnode.com/res/hashnode/image/stock/unsplash/IbngTBpNuMA/upload/4851d71060f43601161f36d88f35ee9a.jpeg
+cover: https://cdn.hashnode.com/res/hashnode/image/stock/unsplash/0jIovxJj7pY/upload/196361d36cb362cce33ab4bda4a6b57a.jpeg
 tags: web-development, webdev, electric-vehicle
 
 ---
@@ -29,7 +29,7 @@ There are several distinct reasons for starting this blog, so I'll elaborate on 
 
 ### How did you design the website to host the blog?
 
-The blog website is built using a design provided by Hashnode, a global community platform for developers to connect, share knowledge, and learn from one another. As of now, I haven't made many additional design changes to the website (although this may change if you're reading the blog at a later date). I opted for Hashnode over creating my own website from scratch because it already includes all the essential components for a blog site and offers a thriving community for engagement and networking.
+The blog website is built using a design provided by **Hashnode**, a global community platform for developers to connect, share knowledge, and learn from one another. As of now, I haven't made many additional design changes to the website (although this may change if you're reading the blog at a later date). I opted for Hashnode over creating my own website from scratch because it already includes all the essential components for a blog site and offers a thriving community for engagement and networking.
 
 In the future, I plan to further customize the website to make it truly unique and reflective of my personal style. This will involve adding custom design elements, adjusting the layout, and possibly incorporating interactive features to enhance the user experience.
 
@@ -56,11 +56,11 @@ Here's an expanded list of the series I plan to start on the blog, delving into 
 
 ### What's your favorite thing about writing?
 
-One of the things I love about blogging is the freedom it gives me to express myself. It's a thrilling journey of discovery where I can dive deep into topics that fascinate me, break them down, and share my thoughts with the world. I can't even begin to express the joy I feel when I hit that 'publish' button and my words, my thoughts, and my experiences are out there for everyone to see. It's like giving a piece of myself to the world, and in return, I get to connect with others, learn from their experiences, and grow as a person. Every blog post is a new adventure, a new story to tell, and I am beyond excited about where this journey is taking me!
+One of the things I love about blogging is the freedom it gives me to **express myself.** It's a thrilling journey of discovery where I can dive deep into topics that fascinate me, break them down, and share my thoughts with the world. I can't even begin to express the joy I feel when I hit that 'publish' button and my words, my thoughts, and my experiences are out there for everyone to see. It's like giving a piece of myself to the world, and in return, I get to connect with others, learn from their experiences, and grow as a person. Every blog post is a new adventure, a new story to tell, and I am beyond excited about where this journey is taking me!
 
 ### What's your least favorite thing about writing?
 
-Despite my passion for blogging, there's one aspect that I expect to be a challenge - the pressure of consistency. The anticipation of keeping up with a regular posting schedule, ensuring each post is as engaging as the last, may sometimes feel overwhelming. It's like a race against the clock, a constant battle with the blank page. But, in all honesty, it's this very challenge that makes the process even more exhilarating. It pushes me to step out of my comfort zone, think on my feet, and strive for improvement continuously. So, even my least favorite thing about blogging ends up being a catalyst for growth and creativity. And that's the beauty of it!
+Despite my passion for blogging, there's one aspect that I expect to be a challenge - the **pressure of consistency**. The anticipation of keeping up with a regular posting schedule, ensuring each post is as engaging as the last, may sometimes feel overwhelming. It's like a race against the clock, a constant battle with the blank page. But, in all honesty, it's this very challenge that makes the process even more exhilarating. It pushes me to step out of my comfort zone, think on my feet, and strive for improvement continuously. So, even my least favorite thing about blogging ends up being a catalyst for growth and creativity. And that's the beauty of it!
 
 ### Why do you want to be an engineer & entrepreneur?
 
@@ -68,7 +68,7 @@ My aspiration to become an engineer, specifically in the field of autonomous veh
 
 Being an entrepreneur complements my engineering aspirations, as it allows me to transform these innovative technologies into viable business solutions. The cross-section of engineering and entrepreneurship is where cutting-edge innovations meet market needs, creating a unique value proposition. It's the thrill of leading teams, navigating business challenges, and bringing these technological solutions to market that draws me towards entrepreneurship.
 
-%\[[https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTZ0OGptaWFoZGh5emY4a2RiYnNvMmN0Zjdqc21sYWtjNHBtNDZwZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/2IudUHdI075HL02Pkk/giphy.gif](https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTZ0OGptaWFoZGh5emY4a2RiYnNvMmN0Zjdqc21sYWtjNHBtNDZwZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/2IudUHdI075HL02Pkk/giphy.gif)\]
+%[https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZTZ0OGptaWFoZGh5emY4a2RiYnNvMmN0Zjdqc21sYWtjNHBtNDZwZSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/2IudUHdI075HL02Pkk/giphy.gif] 
 
 ### What other activities do you dedicate your time to?
 
@@ -82,27 +82,28 @@ Being an entrepreneur complements my engineering aspirations, as it allows me to
     
 5. **Tutoring:** I help peers around the globe through a platform called Schoolhouse. To sign up for a future session and view my impact, visit my [profile](https://schoolhouse.world/u/78275).
     
-6. **Band:** As a part of my high school's band I play clarinet and oboe while dedicating time to after-school rehearsals and other competitions. Further, I help maintain the organization's website as webmaster
-    
-7. **Other Projects:** Previously, I served as an intern at the IEEE Nanotechnology Council and the University of Washington while studying 2D Materials. Additionally, I am leading an international team in the CERN Bl4S competition with a proposal about batteries' changes in spacelike-radiation.
+6. **Other Projects:** Previously, I served as an intern at the IEEE Nanotechnology Council and the University of Washington while studying 2D Materials. Additionally, I am leading an international team in the CERN Bl4S competition with a proposal about batteries' changes in spacelike-radiation.
     
 
 ### What are your future goals and aspirations?
 
-In the future, I aspire to pursue a degree that intersects the fields of engineering, computer science, and business. This unique blend of disciplines will equip me with the necessary technical skills, analytical capabilities, and entrepreneurial perspective to navigate the rapidly evolving technological landscape. My ultimate goal is to leverage these skills to research and develop innovative products that have the potential to significantly enhance our society. I envision myself at the forefront of technological advancements, transforming cutting-edge ideas into marketable solutions that address real-world needs. Whether it's through creating more efficient energy systems, developing advanced AI-driven tools, or improving digital infrastructures, I aim to make a meaningful impact on society and drive progress toward a more sustainable and inclusive future.
+In the future, I aspire to pursue a degree that intersects the fields of **engineering, computer science, and business.** This unique blend of disciplines will equip me with the necessary technical skills, analytical capabilities, and entrepreneurial perspective to navigate the rapidly evolving technological landscape. My ultimate goal is to leverage these skills to research and develop innovative products that have the potential to significantly enhance our society. I envision myself at the forefront of technological advancements, transforming cutting-edge ideas into marketable solutions that address real-world needs. Whether it's through creating more efficient energy systems, developing advanced AI-driven tools, or improving digital infrastructures, I aim to make a meaningful impact on society and drive progress toward a more sustainable and inclusive future.
 
 ### What's your family background?
 
-I hail from Haryana, a vibrant state in India, rich in culture and tradition. While it's considered a lesser-developed region, the spirit of its people and the potential it holds are immense. My family's journey from Haryana to the United States symbolizes my parents' resilience and pursuit. These roots have shaped our values of community, humility, and a passion for learning. As a first-generation immigrant from Haryana, I bring a unique perspective and am eager to contribute to the diversity of the United States.
+I hail from **Haryana**, a vibrant state in India, rich in culture and tradition. While it's considered a lesser-developed region, the spirit of its people and the potential it holds are immense. My family's journey from Haryana to the United States symbolizes my parents' resilience and pursuit. These roots have shaped our values of community, humility, and a passion for learning. As a first-generation immigrant from Haryana, I bring a unique perspective and am eager to contribute to the diversity of the United States.
 
 ### How do you spend your free time?
 
-In my free time, I'm an avid supporter of my favorite sports team, the Dallas Cowboys. Whether it's watching their games, analyzing their strategies, or cheering them on, I'm always there for my team. And let's just set the record straight once and for all - Dez definitely caught it! On a different note, I also enjoy origami and cardboard DIY projects. There's something incredibly soothing about folding paper into intricate designs and transforming ordinary cardboard into unique creations. It's a blend of precision, creativity, and patience, much like waiting for the referees to make the right call!
+In my free time, I'm an avid supporter of my favorite sports team, the Dallas Cowboys. Whether it's watching their games, analyzing their strategies, or cheering them on, I'm always there for my team. And let's just set the record straight once and for all - **Dez definitely caught it!** On a different note, I also enjoy origami and cardboard DIY projects. There's something incredibly soothing about folding paper into intricate designs and transforming ordinary cardboard into unique creations. It's a blend of precision, creativity, and patience, much like waiting for the referees to make the right call!
 
-P.S. As you may realize, I love GIFs!
+<div data-node-type="callout">
+<div data-node-type="callout-emoji">💡</div>
+<div data-node-type="callout-text">P.S. As you may realize, I love GIFs!</div>
+</div>
 
 ### Conclusion
 
 Whoo...that was a lot. I hope you learned something about me! I appreciate your time and engagement.
 
-%\[[https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaDBodXNnZzdpeHoyb2sya3R2ZGx3c3FpNGZidHB2ajRtaW1zNXB3dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oriNScTbEzEVoR1Is/giphy.gif](https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaDBodXNnZzdpeHoyb2sya3R2ZGx3c3FpNGZidHB2ajRtaW1zNXB3dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oriNScTbEzEVoR1Is/giphy.gif)\]
+%[https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaDBodXNnZzdpeHoyb2sya3R2ZGx3c3FpNGZidHB2ajRtaW1zNXB3dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oriNScTbEzEVoR1Is/giphy.gif]
