update post: Beginning My Blogging Journey: 10 Q & A s

--- a/cloz6a9gp000208i928nab050.md
+++ b/cloz6a9gp000208i928nab050.md
@@ -97,13 +97,10 @@ I hail from **Haryana**, a vibrant state in India, rich in culture and tradition
 
 In my free time, I'm an avid supporter of my favorite sports team, the Dallas Cowboys. Whether it's watching their games, analyzing their strategies, or cheering them on, I'm always there for my team. And let's just set the record straight once and for all - **Dez definitely caught it!** On a different note, I also enjoy origami and cardboard DIY projects. There's something incredibly soothing about folding paper into intricate designs and transforming ordinary cardboard into unique creations. It's a blend of precision, creativity, and patience, much like waiting for the referees to make the right call!
 
-<div data-node-type="callout">
-<div data-node-type="callout-emoji">💡</div>
-<div data-node-type="callout-text">P.S. As you may realize, I love GIFs!</div>
-</div>
-
 ### Conclusion
 
 Whoo...that was a lot. I hope you learned something about me! I appreciate your time and engagement.
 
-%[https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaDBodXNnZzdpeHoyb2sya3R2ZGx3c3FpNGZidHB2ajRtaW1zNXB3dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oriNScTbEzEVoR1Is/giphy.gif]
+%[https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExaDBodXNnZzdpeHoyb2sya3R2ZGx3c3FpNGZidHB2ajRtaW1zNXB3dSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/3oriNScTbEzEVoR1Is/giphy.gif] 
+
+P.S. As you may realize, I love **GIFs!**
