update post: Beginning My Blogging Journey: 10 Q & A s

--- a/cloz6a9gp000208i928nab050.md
+++ b/cloz6a9gp000208i928nab050.md
@@ -5,12 +5,12 @@ seoDescription: "Aryan shares his STEM journey, electric vehicles, web developme
 datePublished: Tue Jan 03 2023 06:00:00 GMT+0000 (Coordinated Universal Time)
 cuid: cloz6a9gp000208i928nab050
 slug: my-first-blog
-cover: https://cdn.hashnode.com/res/hashnode/image/stock/unsplash/0jIovxJj7pY/upload/196361d36cb362cce33ab4bda4a6b57a.jpeg
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1704900846863/eb6f481e-19d7-4717-8cfa-b575552c0887.jpeg
 tags: web-development, webdev, electric-vehicle
 
 ---
 
-Hello! My name is Aryan, and I am currently a high school junior from Coppell, Texas in the US. As I am writing this post, it is a gloomy afternoon in January, and I had an impulse to write a blog post. I'm not sure where this blog may go or how it may look. However, I am excited about the impending journey and wherever it leads! Without further ado, here goes the Q & A...
+Hello! My name is Aryan, and I am currently a high school junior from Coppell, Texas in the US. As I am writing this post, it is a gloomy afternoon in January, and I had an impulse to write a blog post. I'm not sure where this blog may go or how it may look. However, I am excited about the impending journey and wherever it leads! Without further ado, here's the Q & A...
 
 ### Why did you start this blog?
 
