update post: Uncovering an 8-year-old Haiku in My Google Drive

--- a/clqmo16rn000208i42x9yc085.md
+++ b/clqmo16rn000208i42x9yc085.md
@@ -9,7 +9,7 @@ tags: poetry, google-drive, literature, haiku
 
 ---
 
-Have you ever searched your Google Drive for a specific document using its name? Well, just today I was looking for an assignment starting with "homework." As I typed in "h", I didn't see the assignment, so I scrolled to the bottom. There, I found a peculiar document titled "haiku" that was last edited on February 6, 2015.
+Have you ever searched your Google Drive for a specific document using its name? Well, just today I was looking for an assignment starting with "homework." As I typed in "h", I didn't see the assignment, so I scrolled to the bottom. There, I found a peculiar document titled "haiku" (precisely in all lowercase) that was last edited on February 6, 2015.
 
 <details data-node-type="hn-details-summary"><summary>What's a Haiku?</summary><div data-type="detailsContent">a Japanese poem of seventeen syllables, in three lines of five, seven, and five, traditionally evoking images of the natural world.</div></details>
 
